
You removed the opt_dct64(fr) ... it has been used in ntom ... but rarely worked.
It may return, but only after actually testing which dct64 works (one candidate is plain 3dnow).
First get the load of restructuring in!

Also, implement something for MPG123_ENC_UNISGNED_16 ... either another whole set of functions or some postprocessing.


1.7.0
---
- --preload
- Lots of output format fun!
- Lots of functionality now optional, enabling small-footpring builds of libmpg123.
  ... some ends left ... I/O, strings, streamlining overhead code in libmpg123.c ...
A test build for layer3 only was down to around 120K with -Os ...

1.6.4
---
- Fix for consistent NtoM resampled decoding and broken frames fillup.

1.6.3
---

- Fix sf.net bug #2413608: Make sure a new format does not slip through after early close.
- Include equalizer example file and a piece of wrapper code for MSVC++ in the distribution.
- Do not claim to support unsigned 16 bit encoding (never been the case).
- Fix default fifo detection, now it actally activates fifo support!

1.6.2
---

- Fix default IPv6 detection in configure.ac (a typo has been introduced before).

1.6.1
---

- Fix printing of largefile offsets in remote control interface.
- Some portability fixes (reduced compiler warnings on Solaris, p.ex.).

1.6.0
---
- small things inside that I forgot to mention
- some new commands for remote control interface:
  - SCAN
  - SAMPLE
  - EQFILE
  - SHOWEQ
- added --keep-open command line flag (for remote control)
- fixed equalizer file parsing to really handle comment lines as example file suggests
- more elaborate detection of UTF-8 locale, also --utf8 switch to force it
- added --fuzzy to enable inexact seeking (see below)
- added --index-size parameter for tuning accurate frame seek index
- enabling largefile support via configure
- libmpg123 11.0.11:
  - added mpg123_geteq(), mpg123_tell_stream() and mpg123_getstate()
  - API cleanup (take const char* for mpg123_open())